# twist_qsi

./: .gitignore  Makefile  README.md  SIMULATION_PLAN.md  hamiltonian_symmetry_writeup.tex  pyproject.toml  source_field_campaign_note.tex
campaign/: README.md  config.json  fcc32_xyz_manifest.json  label_fig1.py  make_figures.py  material_fit_config.json  run_ce2hf2o7_fit.py  run_dssf.py  run_loop_amplitude_audit.py  run_nonperturbative.py  run_validation.py
docs/: projected_band_protocol_note.tex  projected_band_protocol_note.toc
legacy/: README.md
notes/: finite_size_loop_projection_notes.tex  full_ed_16site_spectrum_jm0p05.npz  full_ed_all_temperature_check_jm0p05.json  full_ed_all_temperature_check_jm0p05.npz  make_figures.py  make_paper_figures.py  plot_all_scenarios.py  plot_full_ed_all_temperature.py  plot_specific_heat_all_cases.py  plot_thermal_expansion_B.py  projection_kernel_tests_16site_jm0p05.json  qed_protocol_16site_comparison_dipole2_M2_jm0p05.json  qed_protocol_16site_comparison_dipole4_M3_jm0p05.json  qed_protocol_16site_comparison_jm0p05.json  recompute_finite_size_artifact.py  recomputed_finite_size_artifact.json  recomputed_specific_heat_curves.npz  thermal_expansion_B_ice_manifold.npz  thermal_expansion_B_sweep.npz  thermal_expansion_B_sweep.py  thermal_expansion_ice_manifold.py  twist_resolved_full_band.py  twist_resolved_full_band_symmetry.py  twist_resolved_krylov_verify.py  twist_resolved_qed_dipole2_M2_jm0p05.json  twist_resolved_qed_dipole2_M2_jm0p05.npz  twist_resolved_qed_dipole4_M3_jm0p05.json  twist_resolved_qed_dipole4_M3_jm0p05.npz  (+6 more)
(+292 files in other folders)
