[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qsi-winding-clean"
version = "0.1.0"
description = "Validation campaign for transport-projected quantum spin ice exact diagonalization"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "scipy>=1.11", "matplotlib>=3.8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
